@@ -19,6 +19,7 @@ version 0.99.5 - xx-Dec-2010
 . [FIX] Sprite: Assert if an sprite initialized with a batchnode is not using it (issue #1053)
 . [FIX] Sprite: correctly overrides setIsRelativeAnchorPoint (issue #1055)
 . [FIX] SpriteFrameCache: textureFileName is relative to path (issue #1044)
+. [FIX] Particles: QuadParticle uses Points (issue #1057)
 . [FIX-MAC] Display Link thread: async images works as expected. Disabled by default.
 . [FIX-MAC] MacGLView: VSync is enabled when the view is loaded from the NIB
 . [TEST] Added Glyph Designer test case
